<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="-28dp"
    tools:layout_editor_absoluteY="-10dp">


    <ImageView
        android:id="@+id/iv_signUpLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ideall_logo" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/signUpgridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/borders_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_signUpLogo">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b_signUpSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/radius_30"
            android:text="@string/signIn"
            android:textSize="21sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/b_signUpSignUp"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:background="@drawable/radius_30"
            android:text="@string/signUp"
            android:textSize="21sp"
            tools:ignore="TextContrastCheck" />
    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/tv_signUpWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:text="@string/signUpWelcome"
        android:textColor="@color/orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpgridLayout" />

    <TextView
        android:id="@+id/tv_signUpUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:text="@string/user"
        android:textColor="@color/orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signUpWelcome" />

    <EditText
        android:id="@+id/et_signUpUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="4dp"
        android:autofillHints="true"
        android:ems="10"
        android:hint="@string/enterUserName"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signUpUser"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_signUpEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textColor="@color/orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_signUpUserName" />

    <EditText
        android:id="@+id/et_signUpEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="4dp"
        android:autofillHints="true"
        android:ems="10"
        android:hint="@string/enterEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signUpEmail"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_signUpPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textColor="@color/orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_signUpEmail" />

    <EditText
        android:id="@+id/et_signUpPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="4dp"
        android:autofillHints="true"
        android:ems="10"
        android:hint="@string/enterPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signUpPassword"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/et_signUpConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="4dp"
        android:autofillHints="true"
        android:ems="10"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_signUpPassword"
        tools:ignore="TextContrastCheck" />

    <CheckBox
        android:id="@+id/cb_signUpPolicy"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/termsAndPolicy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_signUpConfirmPassword" />

    <Button
        android:id="@+id/b_signUp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/radius_30"
        android:text="@string/signUp"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_signUpPolicy"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>