<?xml version="1.0" encoding="utf-8"?>
<!-- Scrollview takes the xmlns to be the leading page-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments_idea.SecondFragment">


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_ideaPorpuse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"

            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp">

            <EditText
                android:id="@+id/et_ideaPorpuse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/describePurpose"
                android:padding="10dp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_ideaPresent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:layout_constraintTop_toBottomOf="@+id/cv_ideaPorpuse"
            tools:layout_editor_absoluteX="16dp">

            <EditText
                android:id="@+id/et_ideaPresent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/describePresent"
                android:padding="10dp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_ideaEffects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:layout_constraintTop_toBottomOf="@+id/cv_ideaPresent"
            tools:layout_editor_absoluteX="16dp">

            <EditText
                android:id="@+id/et_ideaEffects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/describeEffect"
                android:padding="10dp" />

        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/b_Save2"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/radius_30"
            android:text="@string/save"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.538"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_ideaEffects" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>